--- a/public/index.html
+++ b/public/index.html
@@ -190,8 +190,9 @@
           </button>
         </form>
       </aside>
+    
       <div id="app"></div>
-  
+    </div>
     </main>
 
   <footer class="footer">
