--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     </div>
   </header>
   <main>
-    <div class="row product">
+    <div class="row">
       <div v-if="showProduct">
-
         <div class="col-md-2 col-md-offset-1">
           <figure>
             <img v-bind:src="product.image">
@@ -35,27 +34,144 @@
           </p>
           <button class=" btn btn-primary btn-lg"
             v-on:click="addToCart"
-            v-show="canAddToCart" 
             v-if="canAddToCart">Add to cart</button>
             <button disabled="true" class=" btn btn-primary btn-lg"
               v-else >Add to cart</button>
         </div>
       </div>
       <div v-else>
+        <div class="col-md-10 col-md-offset-1">
+          <div class="panel panel-info">
+            <div class="panel-heading">Pet Depot Checkout</div>
+            <div class="panel-body">
+              <div class="form-group">
+                <div class="col-md-12">
+                  <h4><strong>Enter Your Information</strong></h4>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-6">
+                    <strong>First Name:</strong>
+                    <input v-model.trim="order.firstName" class="form-control" />
+                  </div>
+                  <div class="col-md-6">
+                    <strong>Last Name:</strong>
+                    <input v-model.trim="order.lastName" class="form-control" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-12"><strong>Address:</strong></div>
+                  <div class="col-md-12">
+                    <input v-model.trim="order.address" class="form-control" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-12"><strong>City:</strong></div>
+                  <div class="col-md-12">
+                    <input v-model.trim="order.city" class="form-control" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-2">
+                    <strong>State:</strong>
+                    <select v-model="order.state" class="form-control">
+                      <option disabled value="">State</option>
+                      <option v-for="(state, key) in states" v-bind:value="state">
+                        {{key}}
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-6 col-md-offset-4">
+                    <strong>Zip / Postal Code:</strong>
+                    <input v-model.number="order.zip"
+                      class="form-control"
+                      type="number"/>
+                  </div>
+                </div>
 
+                <div class="form-group">
+                  <div class="col-md-6 boxes">
+                    <input type="checkbox"
+                      id="gift" value="true"
+                      v-bind:true-value="order.sendGift"
+                      v-bind:false-value="order.dontSendGift"
+                      v-model="order.gift">
+                    <label for="checkbox">Ship As Gift?</label>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-6 boxes">
+                    <input type="radio"
+                      id="home"
+                      v-bind:value="order.home"
+                      v-model="order.method">
+                    <label for="home">Home</label>
+                    <input type="radio"
+                      id="business"
+                      v-bind:value="order.business"
+                      v-model="order.method">
+                    <label for="business">Business</label>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-6">
+                    <button type="submit" class="btn btn-primary submit" v-on:click="submitForm">Place Order</button>
+                  </div>
+                </div>
+                <div class="col-md-12 verify">
+                  <pre>
+                    First Name: {{order.firstName}}
+                    Last Name: {{order.lastName}}
+                    Address: {{order.address}}
+                    City: {{order.city}}
+                    Zip: {{order.zip}}
+                    State: {{order.state}}
+                    Method: {{order.method}}
+                    Gift: {{order.gift}}
+                  </pre>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
       </div>
-    </div><!--end of row-->
+    </div>
 
-  </main><!--end of main-->
+  </main>
 
 </div>
     <script type="text/javascript">
     var APP_LOG_LIFECYCLE_EVENTS = true;
     var webstore = new Vue({
       el: '#app',
-      data: {      
+      data: {
         sitename: "Vue.js Pet Depot",
         showProduct: true,
+        a: false,
+        states: {
+          AL: 'Alabama',
+          AK: 'Alaska',
+          AR: 'Arizona',
+          CA: 'California',
+          NV: 'Nevada'
+        },
+        order: {
+          firstName: '',
+          lastName: '',
+          address: '',
+          city: '',
+          zip: '',
+          state: '',
+          method: 'Home Address',
+          business: 'Business Address',
+          home: 'Home Address',
+          gift:'Send As A Gift',
+          sendGift: 'Send As A Gift',
+          dontSendGift: 'Do Not Send As A Gift'
+        },
         product: {
           id: 1001,
           title: "Cat Food, 25lb bag",
@@ -71,18 +187,19 @@
           this.cart.push( this.product.id );
         },
         showCheckout() {
-            this.showProduct = this.showProduct ? false: true;
+          this.showProduct = this.showProduct ? false: true;
         },
+        submitForm() {
+          alert('Submitted');
+        }
       },
       computed: {
-          cartItemCount() {
-            return this.cart.length || '';
-          },
-          
-          canAddToCart() {
-            return this.product.availableInventory > this.cartItemCount;
-
-          },
+        cartItemCount() {
+          return this.cart.length || '';
+        },
+        canAddToCart() {
+          return this.product.availableInventory > this.cartItemCount;
+        }
       },
       filters: {
         formatPrice(price) {	//#B
